--- a/styles.css
+++ b/styles.css
@@ -81,9 +81,9 @@ body {
 } */
 
 .chat-bubble.bot {
-  align-self: flex-end;
-  background: linear-gradient(135deg, var(--accent-user), #16a34a);
-  color: ##2b41bd;
+  align-self: flex-start;
+  background: linear-gradient(135deg, var(--accent-user), #242e69);
+  color: #2b41bd;
   box-shadow: 0 8px 18px rgba(22, 163, 74, 0.45);
 }
 
