--- a/styles.css
+++ b/styles.css
@@ -289,9 +289,12 @@
 }
 
 .choice-buttons {
-  display: flex-end;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
   flex-wrap: wrap;
   gap: 0.5rem;
+  margin-top: 10px;
 }
 
 .choice-buttons button {
@@ -299,6 +302,7 @@
   border-radius: 16px;
   padding: 0.3rem 0.8rem;
   border: 1px solid #ccc;
+  p
 }
 
 .choice-buttons button:hover {
