--- a/styles.css
+++ b/styles.css
@@ -244,19 +244,21 @@
   max-width: 80%;
   line-height: 1.4;
   font-size: 0.95rem;
-  box-shadow: 3px 3px 5px 5px #545454;
+  
 }
 
 .chat-bubble.bot {
   align-self: flex-start;
   background: #e6f0ff;
   color: #123;
+  filter: drop-shadow(13px 29px 21px #545454);
 }
 
 .chat-bubble.user {
   align-self: flex-end;
   background: #d1f3d0;
   color: #123;
+  filter: drop-shadow(-13px 29px 21px #545454);
 }
 
 /* Tiny tails (optional but nice)
