--- a/styles.css
+++ b/styles.css
@@ -50,20 +50,21 @@
 
   /* This fixes clipping inside flex containers */
   position: relative;
+  box-shadow: 0 6px 14px rgba(15, 23, 42, 0.14);
 }
 
 .chat-bubble.bot {
   align-self: flex-start;
   background: #e6f0ff;
   color: #123;
-  filter: drop-shadow(0px 3px 7px #545454);
+  /* filter: drop-shadow(0px 3px 7px #545454); */
 }
 
 .chat-bubble.user {
   align-self: flex-end;
   background: #d1f3d0;
   color: #123;
-  filter: drop-shadow(0px 3px 7px #545454);
+  /* filter: drop-shadow(0px 3px 7px #545454); */
 }
 
 /* Tiny tails (optional but nice)
